# IsingModel

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
python/isingmodel/: __init__.py
python_tests/: test.py
src/: lib.rs
